--- a/portfolio/pom.xml
+++ b/portfolio/pom.xml
@@ -45,6 +45,12 @@
         <version>2.8.6</version>
     </dependency>
 
+    <dependency>
+        <groupId>com.google.cloud</groupId>
+        <artifactId>google-cloud-translate</artifactId>
+        <version>1.70.0</version>
+    </dependency>
+
   </dependencies>
 
   <build>
